samples/_failures_safe/1761267579_a14006_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fdd1a67.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_4fdd1a67.c:175:12: error: missing terminating " character
  175 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_4fdd1a67.c:175:5: error: expected expression at end of input
  175 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_4fdd1a67.c:175:5: error: expected declaration or statement at end of input
